--- a/common.css
+++ b/common.css
@@ -10,6 +10,16 @@ footer{
     background-color: antiquewhite;
 }
 
+nav{
+    display:flex;
+}
+
+nav ul {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #copyright{
     position: absolute;
     bottom: 35px;
