--- a/utility.css
+++ b/utility.css
@@ -1,3 +1,57 @@
-.hidden{
+.flex-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.space-between {
+    justify-content: space-between;
+}
+
+.space-evenly {
+    justify-content: space-evenly;
+}
+
+.give-height {
+    min-height: 33vh;
+}
+
+.ampler-padding {
+    padding: 24px;
+}
+
+.main-container {
+    margin: 0 auto;
+    padding: 24px;
+    max-width: 1200px;
+}
+
+.card-list {
+    display: inline-block;
+}
+
+.take-width {
+    box-sizing: border-box;
+    width: 100%;
+  }
+
+.fullish-height {
+    min-height: 80vh;
+    padding: 24px;
+}
+
+.standard-margin {
+    margin: 10px;
+}
+
+.align-self-center {
+    align-self: center;
+}
+
+.hidden {
     display: none;
 }
